# kotlin-multiplatform-coverage

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/: mod.rs  platform_detector.rs  project_detector.rs
src/adapters/repositories/: dependency_repository_impl.rs  mod.rs  source_file_repository_impl.rs  symbol_repository_impl.rs  symbol_usage_repository_impl.rs
src/analyzer/: dependency_graph.rs  mod.rs  models.rs  symbol_extractor.rs
src/domain/: entities.rs  mod.rs  repositories.rs
src/infrastructure/: mod.rs
src/infrastructure/reporters/: mod.rs
src/parser/: mod.rs
src/use_cases/: analyze_impact.rs  calculate_dependencies.rs  detect_usage.rs  extract_symbols.rs  mod.rs
src/utils/: mod.rs
tests/: integration_test.rs
