[package]
name = "kotlin-multiplatform-coverage"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A tool to analyze Kotlin Multiplatform coverage in monorepo"
license = "MIT"

[lib]
name = "kotlin_multiplatform_coverage"
path = "src/lib.rs"

[[bin]]
name = "kotlin-multiplatform-coverage"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# File system traversal
walkdir = "2.5"
# Git operations
git2 = "0.19"
# Regular expressions
regex = "1.11"
# Serialization/Deserialization (for config files)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
# Logging
log = "0.4"
env_logger = "0.11"
# Table output
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3.13"
